# YASN_code

./: .gitattributes  .gitignore  App.xaml  App.xaml.cs  AppPaths.cs  CLAUDE.md  FloatingWindow.xaml  FloatingWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MarkdownPipelineConfig.cs  NoteData.cs  NoteManager.cs  README.md  SettingsWindow.xaml  SettingsWindow.xaml.cs  WebDavClient.cs  WebDavConfigWindow.xaml  WebDavSyncManager.cs  YASN.csproj  YASN.sln  webdav_quick_test.cs
.github/workflows/: build.yml  ci.yml  release.yml  test-build.yml
Logging/: AppLogger.cs
Markdown/Extensions/: MarkdigHexColorExtension.cs
Properties/: Resources.Designer.cs  Resources.resx
Settings/: GeneralSettingsFieldFactory.cs  SettingsSchema.cs  SettingsStore.cs
Sync/: SyncManager.cs
Sync/Abstractions/: ISyncClient.cs
Sync/WebDav/: WebDavSyncClient.cs
docs/: YASN使用文档.md
native/yasn-notify/: Cargo.toml  README.md  uniffi.toml
native/yasn-notify/src/: lib.rs
scripts/: bundle-macos.sh
scripts/hooks/: pre-commit
src/YASN.App/: App.axaml  App.axaml.cs  GlobalUsings.cs  Program.cs  TrimmerRoots.xml  YASN.App.csproj  app.manifest
src/YASN.Core/: HotkeyAction.cs
src/YASN.Infrastructure/: AppPaths.cs  InfrastructureJsonContext.cs  PreviewStyleManager.cs
tests/YASN.Migration.Tests/: AssetReferenceScannerTests.cs  AutoStartServiceTests.cs  CliCommandParseTests.cs  CliEditJoinTests.cs  CliLayoutMathTests.cs  CliProtocolPayloadTests.cs  CronExpressionTests.cs  EditorModeLayoutTests.cs  FakeSyncClient.cs  FileLockSingleInstanceGuardTests.cs  FloatingNoteWindowLayoutTests.cs  (+41 more)
(+183 files in other folders)
