[package]
name = "yasn-notify"
version = "0.1.0"
edition = "2024"
publish = false
license = "LGPL-3.0-or-later"
description = "Native notification bridge for YASN (fronts user-notify over a UniFFI C# surface)."

# cdylib: the .NET side loads this by bare name `yasn_notify`, which the runtime maps to
# yasn_notify.dll / libyasn_notify.dylib / libyasn_notify.so.
[lib]
name = "yasn_notify"
crate-type = ["cdylib"]

[dependencies]
user-notify = "0.4.2"
# uniffi 0.31.0 is pinned to match uniffi-bindgen-cs v0.11.0+v0.31.0 exactly; a mismatch
# produces a generated binding whose FFI checksums disagree with the cdylib (load-time panic).
# Default features carry the proc-macro scaffolding used by setup_scaffolding!()/#[uniffi::export].
uniffi = "0.31.0"
# user-notify is async; a private current-thread runtime drives its futures so the FFI stays sync.
tokio = { version = "1", features = ["rt"] }
once_cell = "1"
log = "0.4"
